added second card

--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
         </div>
       </div>
     </div>
+    <div class="card card1">
+        <div class="border">
+          <h2>HTML5/CSS3</h2>
+          <div class="icons">
+            <i class="fa fa-codepen" aria-hidden="true"></i>
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+            <i class="fa fa-dribbble" aria-hidden="true"></i>
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.24.1/feather.min.js"></script>
 </body>
